#570 JDK11 migration