@@ -40,24 +40,12 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 
-//as pointed out by @facundofarias, we should check minimum javac version in order to avoid problems with type inference mechanism during compilation
+//as pointed out by @facundofarias, we should validate minimum javac version
 task validate {
     //check JDK version
-    def javaVersion = JavaVersion.current();
-    if (!javaVersion.isJava8Compatible()) {
-        throw new GradleException("A Java JDK 8+ is required to build the project.")
-    }
-    //check build number, but only if current java version is 8
-    if (javaVersion == JavaVersion.VERSION_1_8) {
-        def currentVersion = System.getProperty("java.version")
-        def matcher = Pattern.compile("1(\\.\\d+){2}_(\\d+)").matcher(currentVersion)
-        if (!matcher.find()) {
-            throw new GradleException(currentVersion + " is not a recognized java version. Please report this issue.")
-        }
-        def buildNumber = Integer.parseInt(matcher.group(2))
-        if(buildNumber < 25) {
-            throw new GradleException(currentVersion + " is not a supported JDK version. Minimum version is 1.8.0b25. Please update your local JDK.")
-        }
+    def javaVersion = JavaVersion.current()
+    if (!javaVersion.isJava11Compatible()) {
+        throw new GradleException("A Java JDK 11+ is required to build the project.")
     }
 }
 
@@ -246,6 +234,7 @@ compileJava {
 test {
     useJUnitPlatform()
     systemProperties = System.properties
+    jvmArgs("--illegal-access=warn")
     testLogging {
         events "failed"
         exceptionFormat "full"
